--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["nextui", "sonner", "tailwindcss"]
+  "cSpell.words": ["fontend", "nextui", "sonner", "tailwindcss", "yume"]
 }
