--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.5",
+    "sharp": "^0.33.2",
     "sonner": "^1.2.4"
   },
   "devDependencies": {
