--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-photo-view": "^1.2.4",
     "sass": "^1.69.5",
     "sharp": "^0.33.2",
     "sonner": "^1.2.4"
